--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
     "presets": [
-        "env"
+      "env",
+      "stage-0"
     ],
     "plugins": [
-        "transform-runtime"
+      "transform-runtime"
     ]
-}
+  }
