--- a/package.json
+++ b/package.json
@@ -10,47 +10,52 @@
   },
   "author": "Jason <lujc.me@gmail.com>",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.2",
     "clean-webpack-plugin": "^0.1.19",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.0.0",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "morgan": "^1.9.0",
+    "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
+    "sqlite3": "^4.0.2",
+    "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
+    "vue": "^2.5.16",
+    "vue-axios": "^2.1.1",
+    "vue-loader": "^15.2.4",
+    "vue-router": "^3.0.1",
+    "vue-style-loader": "^4.1.0",
+    "vue-template-compiler": "^2.5.16",
+    "webpack": "^4.13.0",
+    "webpack-cli": "^3.0.8",
+    "webpack-merge": "^4.1.3"
+  },
+  "devDependencies": {
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.2.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.0",
-    "style-loader": "^0.21.0",
-    "url-loader": "^1.0.1",
-    "vue": "^2.5.16",
-    "vue-loader": "^14.2.2",
-    "vue-router": "^3.0.1",
-    "vue-style-loader": "^4.1.0",
-    "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
+    "eslint-plugin-vue": "^4.5.0",
+    "husky": "^1.0.0-rc.12",
     "webpack-dev-middleware": "^3.1.2",
-    "webpack-hot-middleware": "^2.22.1",
-    "webpack-merge": "^4.1.2"
-  },
-  "dependencies": {
-    "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.3",
-    "express-session": "^1.15.6",
-    "morgan": "^1.9.0",
-    "path": "^0.12.7",
-    "serve-favicon": "^2.5.0"
+    "webpack-hot-middleware": "^2.22.1"
   }
 }
