--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.babel.js",
-    "dev": "NODE_ENV=development babel-node backend/app.js",
+    "dev": "NODE_ENV=development NODE_PATH=backend/ babel-node backend/app.js",
     "server": "babel-node backend/app.js"
   },
   "author": "Jason <lujc.me@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
@@ -39,8 +40,8 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue": "^2.5.16",
-    "vue-axios": "^2.1.1",
     "vue-loader": "^15.2.4",
+    "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16",
