--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "path": "^0.12.7",
+    "prismjs": "^1.15.0",
     "serve-favicon": "^2.5.0",
     "sqlite3": "^4.0.2",
     "style-loader": "^0.21.0",
