--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "personal site",
   "main": "index.js",
   "scripts": {
+    "test": "NODE_PATH=backend/ mocha --compilers js:babel-core/register ./test/backend/*.js",
     "build": "webpack --config webpack.prod.babel.js",
     "dev": "NODE_ENV=development NODE_PATH=backend/ babel-node backend/app.js",
     "server": "babel-node backend/app.js"
   },
   "author": "Jason <lujc.me@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run test"
+    }
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
@@ -52,11 +58,13 @@
   },
   "devDependencies": {
     "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.5.0",
-    "husky": "^1.0.0-rc.12",
+    "husky": "^1.0.0-rc.13",
+    "mocha": "^5.2.0",
     "webpack-dev-middleware": "^3.1.2",
     "webpack-hot-middleware": "^2.22.1"
   }
