--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "vue": "^2.5.16",
+    "vue-lazyload": "^1.2.6",
     "vue-loader": "^15.2.4",
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
