Downgrade watchpack to solve markdown hot reload issue.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "vuepress": "^1.5.0"
+    "vuepress": "^1.5.0",
+    "watchpack": "^1.6.1"
   }
 }
