--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@vuepress/plugin-search": "^1.5.0",
     "vuepress": "^1.5.0",
     "watchpack": "^1.6.1"
   }
