--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@vuepress/plugin-active-header-links": "^1.5.0",
     "@vuepress/plugin-search": "^1.5.0",
     "vuepress": "^1.5.0",
+    "vuepress-plugin-smooth-scroll": "0.0.9",
     "watchpack": "^1.6.1"
   }
 }
