--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {},
   "devDependencies": {
     "@vuepress/plugin-active-header-links": "^1.5.0",
+    "@vuepress/plugin-google-analytics": "^1.5.0",
     "@vuepress/plugin-search": "^1.5.0",
     "vuepress": "^1.5.0",
     "vuepress-plugin-smooth-scroll": "0.0.9",
