--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ script:
   - npm run docs:build
 deploy:
   provider: pages
+  repo: Jason0214/Jason0214.github.io
+  target_branch: master
   skip_cleanup: true
   local_dir: docs/.vuepress/dist
   github_token: $GITHUB_TOKEN # A token generated on GitHub allowing Travis to push code on you repository. Set in the Travis settings page of your repository, as a secure variable
