--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@vuepress/plugin-active-header-links": "^1.5.0",
     "@vuepress/plugin-google-analytics": "^1.5.0",
     "@vuepress/plugin-search": "^1.5.0",
+    "markdown-it-image-lazy-loading": "^1.0.2",
     "vuepress": "^1.5.0",
     "vuepress-plugin-smooth-scroll": "0.0.9",
     "watchpack": "^1.6.1"
