--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "@vuepress/plugin-active-header-links": "^1.5.0",
     "@vuepress/plugin-google-analytics": "^1.5.0",
     "@vuepress/plugin-search": "^1.5.0",
-    "ip": "^1.1.5",
-    "lodash.template": "^4.5.0",
+    "has-ansi": "^4.0.0",
     "markdown-it-image-lazy-loading": "^1.0.2",
-    "serialize-javascript": "^5.0.1",
     "vuepress": "^1.5.0",
     "vuepress-plugin-smooth-scroll": "0.0.9",
     "watchpack": "^1.6.1"
